package com.aaron.base.impl;

import androidx.viewpager.widget.ViewPager;

/**
 * OnPageChangeListener 的空实现
 *
 * @author Aaron aaronzheng9603@gmail.com
 */
public abstract class OnPageChangeListenerImpl implements ViewPager.OnPageChangeListener {

    @Override
    public void onPageScrolled(int position, float positionOffset, int positionOffsetPixels) {

    }

    @Override
    public void onPageSelected(int position) {

    }

    @Override
    public void onPageScrollStateChanged(int state) {

    }
}
