@startuml

title __BASE's Class Diagram__\n

  namespace com.aaron.base {
    class com.aaron.base.BuildConfig {
    }
  }
  

  namespace com.aaron.base {
    class com.aaron.base.BuildConfig {
    }
  }
  

  namespace com.aaron.base {
    namespace base {
      class com.aaron.base.base.ActivityCollector {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace base {
      abstract class com.aaron.base.base.BaseActivity {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace base {
      abstract class com.aaron.base.base.BaseApp {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace base {
      abstract class com.aaron.base.base.BaseFragment {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace base {
      interface com.aaron.base.base.IBaseActivity {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace base {
      interface com.aaron.base.base.IBaseFragment {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace base {
      interface com.aaron.base.base.IContract {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace callback {
      interface com.aaron.base.callback.HttpCallback {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace http {
      class com.aaron.base.http.HttpUtil {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      class com.aaron.base.image.ImageLoader {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        class com.aaron.base.image.test.DefaultOption {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        class com.aaron.base.image.test.GlideEngine {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        interface com.aaron.base.image.test.ILoader {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        interface com.aaron.base.image.test.ImageEngine {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        class com.aaron.base.image.test.ImageLoader {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        abstract class com.aaron.base.image.test.ImageOption {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        interface com.aaron.base.image.test.LoadListener {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace image {
      namespace test {
        enum ScaleType {
        }
      }
    }
  }
  

  namespace com.aaron.base {
    namespace impl {
      abstract class com.aaron.base.impl.ObserverImpl {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace impl {
      abstract class com.aaron.base.impl.OnClickListenerImpl {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace impl {
      abstract class com.aaron.base.impl.OnPageChangeListenerImpl {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace impl {
      class com.aaron.base.impl.SingleObserverImpl {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace impl {
      abstract class com.aaron.base.impl.TextWatcherImpl {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace util {
      class com.aaron.base.util.StatusBarUtils {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace util {
      class com.aaron.base.util.TimerUtils {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      abstract class com.aaron.base.webview.AbstractBrowserActivity {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      class com.aaron.base.webview.SonicJavaScriptInterface {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      class com.aaron.base.webview.SonicRuntimeImpl {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      class com.aaron.base.webview.SonicSessionClientImpl {
      }
    }
  }
  

  com.aaron.base.base.BaseActivity .up.|> com.aaron.base.base.IBaseActivity
  com.aaron.base.base.BaseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.aaron.base.base.BaseApp -up-|> android.app.Application
  com.aaron.base.base.BaseFragment .up.|> android.view.View.OnTouchListener
  com.aaron.base.base.BaseFragment .up.|> com.aaron.base.base.IBaseFragment
  com.aaron.base.base.BaseFragment -up-|> androidx.fragment.app.Fragment
  com.aaron.base.base.BaseFragment o-- com.aaron.base.base.BaseActivity : mActivity
  com.aaron.base.image.test.DefaultOption -up-|> com.aaron.base.image.test.ImageOption
  com.aaron.base.image.test.GlideEngine .up.|> com.aaron.base.image.test.ImageEngine
  com.aaron.base.image.test.ImageLoader .up.|> com.aaron.base.image.test.ILoader
  com.aaron.base.image.test.ImageLoader o-- com.aaron.base.image.test.ImageEngine : mImageEngine
  com.aaron.base.image.test.ImageOption o-- com.aaron.base.image.test.LoadListener : mListener
  com.aaron.base.image.test.ImageOption o-- com.aaron.base.image.test.ScaleType : mScaleType
  com.aaron.base.impl.ObserverImpl .up.|> io.reactivex.Observer
  com.aaron.base.impl.OnClickListenerImpl .up.|> android.view.View.OnClickListener
  com.aaron.base.impl.OnPageChangeListenerImpl .up.|> androidx.viewpager.widget.ViewPager.OnPageChangeListener
  com.aaron.base.impl.SingleObserverImpl .up.|> io.reactivex.SingleObserver
  com.aaron.base.impl.TextWatcherImpl .up.|> android.text.TextWatcher
  com.aaron.base.util.TimerUtils o-- com.aaron.base.util.TimerUtils.Listener : mListener
  com.aaron.base.webview.AbstractBrowserActivity -up-|> com.aaron.base.base.BaseActivity
  com.aaron.base.webview.SonicJavaScriptInterface o-- com.aaron.base.webview.SonicSessionClientImpl : sessionClient
  com.aaron.base.webview.SonicRuntimeImpl -up-|> com.tencent.sonic.sdk.SonicRuntime
  com.aaron.base.webview.SonicSessionClientImpl -up-|> com.tencent.sonic.sdk.SonicSessionClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
